# neomake

./: .gitignore  .neomake.yaml  Cargo.toml  flake.nix  neomake.yaml
.github/workflows/: release.yaml
docs/: README.md
res/templates/: max.neomake.yaml  min.neomake.yaml  python.neomake.yaml
src/: args.rs  compiler.rs  exec.rs  main.rs  plan.rs  workflow.rs
test/: neomake.yaml
