[package]
name = "neomake"
version = "0.0.0"
authors = ["cchexcode <alexanderh.weber@outlook.com>"]
edition = "2021"
license = "MIT"
description = "A more powerful alternative to Makefiles."
homepage = "https://github.com/cchexcode/neomake"
repository = "https://github.com/cchexcode/neomake"
keywords = ["make", "cli", "task", "runner"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []
"format+json" = []
"format+ron" = ["dep:ron"]

[dependencies]
bobr = { version = "0.2.0", default-features = false }
async-trait = "0.1.72"
tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "time",
    "sync",
] }
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.138"
ron = { version = "0.8.0", optional = true }
bytes = "1.4.0"
mime = "0.3.17"
handlebars = "4.3.7"
crossterm = "0.26.1"
itertools = "0.11.0"
threadpool = "1.8.1"
schemars = "0.8.12"
fancy-regex = "0.11.0"
anyhow = "1.0.72"
thiserror = "1.0.44"
walkdir = "2.4.0"
notify = "6.1.1"
signal-hook = "0.3.17"
flume = "0.11.1"
parking_lot = "0.12.3"
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
hoox = "0.3.0"
