[package]
name = "neomake"
version = "0.0.0"
authors = ["cchexcode <alexanderh.weber@outlook.com>"]
edition = "2021"
license = "MIT"
description = "A more powerful alternative to Makefiles."
homepage = "https://github.com/cchexcode/neomake"
repository = "https://github.com/cchexcode/neomake"
keywords = ["make", "cli", "task", "runner"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []
"format+json" = []
"format+ron" = ["dep:ron"]

[dependencies]
bobr = { version = "0.2.2", default-features = false }
async-trait = "0.1.86"
tokio = { version = "1.43.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "time",
    "sync",
] }
clap = "4.5.29"
clap_complete = "4.5.46"
clap_mangen = "0.2.26"
clap-markdown = "0.1.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.138"
bytes = "1.10.0"
mime = "0.3.17"
handlebars = "6.3.1"
crossterm = "0.28.1"
itertools = "0.14.0"
threadpool = "1.8.1"
schemars = "0.8.21"
fancy-regex = "0.14.0"
anyhow = "1.0.95"
walkdir = "2.5.0"
notify = "8.0.0"
signal-hook = "0.3.17"
flume = "0.11.1"
parking_lot = "0.12.3"
chrono = { version = "0.4.39", features = ["serde"] }

# optional dependencies
ron = { version = "0.8.1", optional = true }

[dev-dependencies]
hoox = "0.3.0"
